add navbar to other pages

--- a/css/about.css
+++ b/css/about.css
@@ -78,6 +78,29 @@ section {
     border-radius: 0.4rem;
 }
 
+#nav-bar {
+    position: fixed;
+    transition: top 0.3s;
+    padding: 0 7% 10px 7%;
+    z-index: 1;
+    width: 100%;
+}
+
+.color {
+    background-color: #ffb200;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.link-color {
+      color: #21110e;
+}
+
 /*** start of header section ***/
 #header-section {
     height: 90vh;
