--- a/css/shop.css
+++ b/css/shop.css
@@ -79,9 +79,18 @@ section {
     color: #ffd880;
 }
 
-.navbar-light .navbar-nav .nav-item .phone-number {
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #ffd880;
+}
+
+.navbar-light .navbar-nav .nav-item #phone-number {
     border: 1px solid #ffd880 ;
     border-radius: 0.4rem;
+}
+
+#nav-bar button {
+    background-color: #ffb200 !important;
+    outline: none;
 }
 
 #nav-bar {
@@ -126,7 +135,7 @@ section {
 .header-text {
     position: absolute;
     top: 38%;
-    left: 20%;
+    left: 10%;
     color: #ffffff;
 }
 
@@ -277,8 +286,8 @@ footer ul {
 }
 
 footer input {
-    width: 225px;
-    height: 4rem;
+    width: 200px;
+    height: 3rem;
     border-radius: 0.4rem;
     border: none;
     padding: 0.5rem 1rem;
@@ -287,10 +296,68 @@ footer input {
 footer .cta {
     margin-left: 1rem;
     background-color: #ffb200;
+    padding: 0.4rem 3rem;
+    border-radius: 0.4rem;
 }
 
 footer .social-icons {
     padding-left: 1rem;
     font-size: 2rem;
     color: #ffb200;
+}
+
+/* media queries */
+@media (max-width: 990px) {
+
+    footer .container {
+        text-align: center;
+    }
+
+    footer form {
+        padding: 1rem 0;
+    }
+}
+
+@media (max-width: 770px) {
+    .header-text .container {
+        max-width: 100%;
+    }
+
+    .header-text {
+        position: absolute;
+        top: 28%;
+    }
+
+    .header-text h1 {
+        font-size: 5rem;
+    }
+
+    .header-text p br {
+        display: none;
+    }
+}
+
+@media (max-width: 585px) {
+    .header-text {
+        padding: 0 3rem;
+    }
+
+    .header-text h1 {
+        font-size: 4.5rem;
+    }
+
+    .header-text {
+        position: absolute;
+        left: 0;
+    }
+
+    .header-text p br {
+        display: none;
+    }
+
+    .header-text .cta {
+        display: inline-block;
+        margin-top: 2rem;
+        padding: 0.7rem 3rem;
+    }
 }
